fixed: overlaping mat-card-action & navbar elements

--- a/RecipeF/src/app/components/navbar/navbar.component.css
+++ b/RecipeF/src/app/components/navbar/navbar.component.css
@@ -23,6 +23,7 @@ mat-toolbar {
   justify-content: space-between;
   padding: 0 2rem;
   border-bottom: 2px solid rgb(211, 211, 211);
+  overscroll-behavior: hidden;
 }
 
 .logo {
