--- a/RecipeF/src/app/components/recipe-card/recipe-card.component.css
+++ b/RecipeF/src/app/components/recipe-card/recipe-card.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  overflow: hidden;
 }
 
 .example-card {
@@ -34,6 +35,13 @@ mat-card-actions {
   display: flex;
   justify-content: space-between;
   transition: z-index 0ms ease-in-out;
+  opacity: 1; /* Start with full visibility */
+}
+
+.mat-card-actions-hidden {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0s;
 }
 
 mat-card-actions.sidenav-open {
@@ -41,7 +49,7 @@ mat-card-actions.sidenav-open {
 }
 
 mat-card-actions.sidenav-closed {
-  z-index: 5;
+  z-index: 2;
 }
 
 @media (min-width: 600px) {
